# mission-sni-spoofing

./: .gitignore  README.md
hamieh-tunnel/: README.md  pyproject.toml
hamieh-tunnel/cli/: __init__.py  main.py
hamieh-tunnel/client/: __init__.py  routing.py  socks5.py  tun_interface.py
hamieh-tunnel/config/: default.yaml  example-azure-dev.yaml  example-sni-bypass.yaml  server.yaml
hamieh-tunnel/core/: __init__.py  config.py  crypto.py  logging_setup.py  metrics.py
hamieh-tunnel/docs/: ARCHITECTURE.md  MOBILE.md  SETUP.md
hamieh-tunnel/flutter_app/: AZURE_PORTAL_ONCE.md  pubspec.yaml
hamieh-tunnel/flutter_app/android/app/: build.gradle.kts
hamieh-tunnel/flutter_app/lib/: main.dart
hamieh-tunnel/flutter_app/lib/config/: oauth_config.dart
hamieh-tunnel/flutter_app/lib/screens/: home_screen.dart  login_screen.dart
hamieh-tunnel/flutter_app/lib/services/: api_service.dart  azure_service.dart
hamieh-tunnel/flutter_app/lib/theme/: app_theme.dart
hamieh-tunnel/flutter_app/tool/: build_release.sh
hamieh-tunnel/mobile_api/: __init__.py  api.py  dashboard.html
hamieh-tunnel/native/hamieh-client/: go.mod  main.go
hamieh-tunnel/server/: Dockerfile  deploy.sh  docker-compose.yml
hamieh-tunnel/server/go/: cert.go  go.mod  main.go
hamieh-tunnel/server/go/auth/: auth.go
hamieh-tunnel/server/go/metrics/: metrics.go
hamieh-tunnel/tests/: test_core.py
hamieh-tunnel/tunnel/: __init__.py  manager.py  obfuscation.py
hamieh-tunnel/tunnel/transport/: __init__.py  azure_dev.py  base.py  https_fallback.py  protocol.py  wss.py
(+5 files in other folders)
